--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Flare Design</title>
-		<script defer data-domain="tryflare.dev" src="https://nudge-events.up.railway.app/js/script.tagged-events.js"></script>
+		<script defer data-domain="tryflare.dev" src="https://nudge-events.up.railway.app/js/script.js"></script>
 	</head>
 	<body>
 		<slot />
