--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -11,6 +11,7 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>Flare Design</title>
 		<script defer data-domain="tryflare.dev" src="https://nudge-events.up.railway.app/js/script.js"></script>
+    	<script src="https://unpkg.com/flare-dev/dist/flare.js"></script>
 	</head>
 	<body>
 		<slot />
